@@ -1,212 +1,3 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <title>Samsung Galaxy Unpacked 2023 | Techmemos</title>
-
-    <link rel="stylesheet" href="/style.css" />
-
-    <script type="text/javascript" src="/js/main.js"></script>
-
-    <!-- CSS only -->
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi"
-      crossorigin="anonymous"
-    />
-
-    <!-- JavaScript Bundle with Popper -->
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
-      crossorigin="anonymous"
-    ></script>
-  </head>
-
-  <!-- Google tag (gtag.js) -->
-  <script
-    async
-    src="https://www.googletagmanager.com/gtag/js?id=G-Z0S8SMB69H"
-  ></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag() {
-      dataLayer.push(arguments);
-    }
-    gtag("js", new Date());
-
-    gtag("config", "G-Z0S8SMB69H");
-  </script>
-
-  <body>
-    <div class="container">
-      <div class="row page-header">
-        <div class="col-md-2">
-          <a href="/"><h1>Techmemos</h1></a>
-        </div>
-        <div class="col-md-6">
-          <ul class="nav nav-pills nav-fill">
-            <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="/newest/"
-                ><b>Newest</b></a
-              >
-            </li>
-            <li class="nav-item">
-              <div class="dropdown">
-                <a
-                  class="nav-link dropdown-toggle"
-                  href="#"
-                  role="button"
-                  data-bs-toggle="dropdown"
-                  aria-expanded="false"
-                >
-                  <b>Topics</b>
-                </a>
-
-                <ul class="dropdown-menu">
-                  <li>
-                    <a class="dropdown-item" href="/topic/phones.html"
-                      >Phones</a
-                    >
-                  </li>
-                  <li>
-                    <a class="dropdown-item" href="/topic/tablets.html"
-                      >Tablets
-                    </a>
-                  </li>
-                  <li>
-                    <a class="dropdown-item" href="/topic/wearables.html"
-                      >Wearables</a
-                    >
-                  </li>
-                  <li>
-                    <a class="dropdown-item" href="/topic/computers.html"
-                      >Computers</a
-                    >
-                  </li>
-                </ul>
-              </div>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="/changelog/"
-                ><b><i>Update Log</i></b></a
-              >
-            </li>
-          </ul>
-        </div>
-      </div>
-      <div class="row">
-        <div class="header-line"></div>
-      </div>
-      <div class="row"></div>
-    </div>
-
-    <div class="container">
-      <div class="row">
-        <div class="col-md-10">
-          <article>
-            <h2>Samsung Galaxy Unpacked to Reveal Galaxy S23 Phones Today</h2>
-            <h5>by Matthew Nudelman</h5>
-            <h6 id="date">Month DD, YYYY</h6>
-            <br />
-            <p>
-              <span class="article-text"
-                >Today, Samsung is set to hold its annual Samsung Unpacked event
-                to present their newest Galaxy S phones, the Samsung Galaxy S23
-                series. A little bit of information on the phones has already
-                come out, though some of it has yet to be officially confirmed.
-                This includes information about the three different models that
-                will be featured, following Samsung's trend of having three
-                models: a normal phone, a “plus” phone, and their flagship
-                “ultra” phone. Similar to Google, Samsung is not expected to
-                drastically change the design of their phones this year, as they
-                seem to have found their current identity in the look and feel
-                of the Galaxy S22 phones just as Google did with the Pixel 6
-                phones.</span
-              >
-              <br />
-              <span class="article-text"
-                >The event will begin at 1:00 pm EST today, February 1, and is
-                expected to showcase a couple of different things, specifically
-                the Galaxy S23 phones and a new Galaxy Book.</span
-              >
-              <br />
-              <span class="article-text"
-                >The Samsung Galaxy S23 is expected to have a near-identical
-                appearance to the S22, though many rumors strongly suggest that
-                the rear camera corner will no longer have a raised edge as the
-                S21 and S22 did, following in the footsteps of the Galaxy S22
-                Ultra and unifying the looks of the phones across the board. The
-                cameras themselves are said to be the same, a 50MP primary
-                sensor with a 12MP ultrawide and 10MP telephoto. The display
-                will also be the same, a 6.1-inch FHD+ screen, which is
-                definitely no disappointment as Samsung is a prolific provider
-                of high-quality display panels even to their competitors
-                (including Apple, whose iPhones use Samsung displays). The
-                cameras in the S23+ will be the same as the S23, so they are not
-                going to be different either. The main upgrade the phones are
-                expected to have is in the processor, as it is believed that
-                both the S23 and S23+ will be using the new Snapdragon 8 Gen 2,
-                not just in certain regions, but everywhere in the world. This
-                would be unexpected as Samsung typically uses their own Exynos
-                chips for certain regions, usually leading to backlash as the
-                Exynos phones tend to be significantly underpowered despite the
-                pricing being relatively the same as the Snapdragon phones. This
-                upgrade to the Snapdragon 8 Gen 2 would be very significant,
-                especially in regions that normally get stuck with Exynos
-                phones. However, the overall price of the S23 series is expected
-                to increase, though a similar rumor surrounding the price of the
-                iPhone 14 was eventually proven to be untrue at the September
-                2022 Apple Event. As expected, the Galaxy S23 Ultra is the
-                biggest point of interest, with its expected 200MP main sensor
-                to replace the 108MP sensor of the camera system of the
-                highly-praised S22 Ultra. The S-Pen is also expected to stay as
-                the S23 Ultra is said to be moving forward with the Ultra
-                redesign of 2022. The device will potentially have slightly less
-                rounded edges to make holding the phone and using the S-Pen more
-                comfortable.</span
-              >
-              <br />
-              <span class="article-text"
-                >The Samsung Unpacked event will go live 1pm EST, 12pm CST, and
-                10am PST today, Feb 1, 2023, and it will definitely be
-                interesting to see what sorts of changes may be made to
-                Samsung's main series of smartphones.
-              </span>
-            </p>
-          </article>
-        </div>
-        <div class="col-md-2">
-          <div class="directory" id="monthbox">
-            <h4>Directory</h4>
-            <script>
-              monthBox();
-            </script>
-          </div>
-          <div class="directory" id="tagbox">
-            <script>
-              tagList();
-            </script>
-          </div>
-          <div class="directory references">
-            <h4>References</h4>
-            <ol>
-              <li id="cite-note-1">
-                <a
-                  href="https://www.techradar.com/news/samsung-unpacked-2023-galaxy-s23-what-to-expect"
-                  target="_blank"
-                  >TechRadar</a
-                >
-              </li>
-            </ol>
-          </div>
-        </div>
-      </div>
-      <div class="row"></div>
-    </div>
-    <hr />
-    <script>
-      dateFill(6);
-    </script>
-  </body>
-</html>
+<!DOCTYPE html><html lang="en"><head><title>Samsung Galaxy Unpacked Reveals New Galaxy S23 Phones | Techmemos</title> <link rel="stylesheet" href="/style.css" /> <script type="text/javascript" src="/js/main.js"></script> <!-- CSS only --> <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous" /> <!-- JavaScript Bundle with Popper --> <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous" ></script> </head> <!-- Google tag (gtag.js) --> <script async src="https://www.googletagmanager.com/gtag/js?id=G-Z0S8SMB69H" ></script> <script> window.dataLayer = window.dataLayer || []; function gtag() { dataLayer.push(arguments); } gtag("js", new Date()); gtag("config", "G-Z0S8SMB69H"); </script> <body> <div class="container"> <div class="row page-header"> <div class="col-md-2"> <a href="/"><h1>Techmemos</h1></a> </div> <div class="col-md-6"> <ul class="nav nav-pills nav-fill"> <li class="nav-item"> <a class="nav-link" aria-current="page" href="/newest/" ><b>Newest</b></a > </li> <li class="nav-item"> <div class="dropdown"> <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false" > <b>Topics</b> </a> <ul class="dropdown-menu"> <li> <a class="dropdown-item" href="/topic/phones.html" >Phones</a > </li> <li> <a class="dropdown-item" href="/topic/tablets.html" >Tablets </a> </li> <li> <a class="dropdown-item" href="/topic/wearables.html" >Wearables</a > </li> <li> <a class="dropdown-item" href="/topic/computers.html" >Computers</a > </li> </ul> </div> </li> <li class="nav-item"> <a class="nav-link" aria-current="page" href="/changelog/" ><b><i>Update Log</i></b></a > </li> </ul> </div> </div> <div class="row"> <div class="header-line"></div> </div> <div class="row"></div> </div> <div class="container"> <div class="row"> <div class="col-md-10"> <article> <h2>Samsung Galaxy Unpacked Reveals New Galaxy S23 Phones</h2> <h5>by Matthew Nudelman</h5> <h6 id="date">Month DD, YYYY</h6> <br /><p><span class="article-text">The 2023 Samsung Galaxy Unpacked event was live on February 1, 2023, and with it Samsung brought information on their latest Galaxy devices. As expected, the Galaxy S23 phones were shown off with many similarities to the S22 phones, with the appearance of the cameras on all three phones being the same as on the S22 Ultra. The processor was also upgraded to the Qualcomm Snapdragon 8 Gen 2, though Samsung claims it is a version specifically designed for Galaxy devices. The S23 and S23+ have the same rear cameras as last year’s phones, but the front-facing camera of the S23+ and S23 Ultra has actually been reduced to 12MP, similar to the front camera of Apple’s iPhone. The Galaxy S22+ and Galaxy S22 Ultra had a 40MP front camera for shooting 4-in-1 binned photos. Other than that, the S23 and S23+ cameras are the same as last year’s with a 50MP wide sensor, a 12MP ultrawide sensor, and a 10MP telephoto sensor with 3x optical zoom.</span><br /><span class="article-text">The main event, once again, was the Galaxy S23 Ultra. Samsung spent a considerable amount of time on the new 200MP camera sensor that they showed off as the ISOCELL HP2 earlier on. The S Pen remains in the Ultra, showing that the Ultra phones truly are the successor to the Galaxy Note phones that were discontinued after the Galaxy Note 20 in 2020. Samsung also claims that low-light and night time photography and video have been improved. Samsung says the Galaxy S23 Ultra is great for astrophotography, true to its Galaxy name. The webpage for the S23 Ultra also states that the battery is the same 5000mAh battery as in the S22 Ultra, but that it is more efficient than last year’s phone due to “improved processing power.”
+</span><br /><span class="article-text">The Samsung Galaxy S23 phones release tomorrow, February 17, 2023. The pricing of the S23 starts at $799, the S23+ starts at $999, and the S23 Ultra starts at $1199. This means the base model’s price increased by $50, the Plus model’s price increased by $100, and the Ultra model’s price increased by $150, and the rumors of an increased price were true. It is exciting to see what people will think once the phones are in the hands of consumers.
+</span><br /></p></article></div><div class="col-md-2"><div class="directory" id="monthbox"><h4>Directory</h4><script>monthBox();</script></div><div class="directory" id="tagbox"><script>tagList();</script></div><div class="directory references"><h4>References</h4><ol><li id="cite-note-1"><a href="https://www.samsung.com/us/smartphones/galaxy-s23-ultra/" target="_blank">Samsung</a></li></li></ol></div></div></div><div class="row"></div></div><hr /><script>dateFill(7);</script></body></html>
