@@ -111,6 +111,12 @@
             <script>
               changeBox(
                 "February",
+                "16",
+                "2023",
+                "Articles can now be made with article builder"
+              );
+              changeBox(
+                "February",
                 "10",
                 "2023",
                 "Fixed article images overlapping text (temporary fix)-Images are now above rather than next to the text (want to fix this eventually)-<b>Computers topic!</b>"
